hotfix z-index issue with hover popup

--- a/styles/style.css
+++ b/styles/style.css
@@ -33,7 +33,7 @@
     border-radius: 6px;
 
     position: absolute;
-    z-index: 1;
+    z-index: 9999;
 
     top: -15px;
     right: 105%;
